feat: implement total feed registering feature